fix: adjust alignment + add mobile view

--- a/src/components/tx/modals/NewTxModal/styles.module.css
+++ b/src/components/tx/modals/NewTxModal/styles.module.css
@@ -29,8 +29,9 @@
 }
 
 .stepper :global .MuiStepConnector-root {
-  left: calc(-50% + 14px);
-  right: calc(50% + 28px);
+  left: -8px;
+  transform: translateX(-50%);
+  width: calc(100% - 40px);
 }
 
 .stepper :global .MuiStepConnector-line {
@@ -39,4 +40,39 @@
 
 .stepper :global .MuiStep-root:not(:nth-of-type(2)) .MuiStepConnector-line {
   border-color: var(--color-border-light);
+}
+
+.or {
+  text-align: center;
+  font-weight: 700;
+  padding: var(--space-2) var(--space-3);
+}
+
+@media (max-width: 600px) {
+  .container {
+    padding: var(--space-3) !important;
+  }
+
+  .stepper {
+    gap: 0;
+  }
+
+  .stepper :global .MuiStep-root {
+    padding: 0 !important;
+    flex-shrink: 0;
+    flex-grow: 0;
+    flex-basis: 25%;
+    width: 25%;
+  }
+
+  .stepper :global .MuiTypography-root {
+    font-size: 11px;
+    line-height: 16px;
+    letter-spacing: 0.4px;
+  }
+
+  .stepper :global .MuiStepConnector-root {
+    left: 0;
+    width: calc(100% - 50px);
+  }
 }
